# cpprast

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GenerateProjectFiles.bat  README.md
graphics/: CMakeLists.txt
graphics/inc/: aligned_unique_ptr.hpp  hash.hpp
graphics/inc/graphics/: BlendMode.hpp  Color.hpp  Enums.hpp  Image.hpp  Rasterizer.hpp  ResourceManager.hpp  SamplerState.hpp  Sprite.hpp  SpriteAnimation.hpp  SpriteSheet.hpp  TileMap.hpp  Window.hpp
graphics/src/: BlendMode.cpp  Color.cpp  Image.cpp  Rasterizer.cpp  ResourceManager.cpp  SamplerState.cpp  Sprite.cpp  SpriteAnimation.cpp  SpriteSheet.cpp  TileMap.cpp  Window.cpp
math/: CMakeLists.txt
math/inc/math/: AABB.hpp  Math.hpp  Rect.hpp  Viewport.hpp
math/src/: Math.cpp
samples/: CMakeLists.txt  imgui.ini
samples/01-ClearScreen/: CMakeLists.txt  main.cpp
samples/02-ImGui/: CMakeLists.txt  main.cpp
samples/03-Image/: CMakeLists.txt  main.cpp
